@@ -88,16 +88,6 @@ Info: This package calls dh_python in its <tt>debian/rules</tt> file.
  dh_python2 is available in Squeeze; if backporting the package to a
  Lenny or older system, please ignore this warning.
 
-Tag: dh_pycentral-is-obsolete
-Severity: normal
-Certainty: certain
-Info: This package calls dh_pycentral in its <tt>debian/rules</tt> file.
- dh_pycentral is deprecated and has been replaced by dh_python2.
- .
- dh_python2 is available in Squeeze; if backporting the package to a
- Lenny or older system, please ignore this warning.
-Ref: http://wiki.debian.org/Python/PyCentral2DhPython2
-
 Tag: dh_pysupport-is-obsolete
 Severity: normal
 Certainty: certain
