@@ -3,7 +3,7 @@ Priority: extra
 Section: {$section}
 Maintainer: {$author}
 Standards-Version: {$standards_version}
-Build-Depends: debhelper (>= 9), python-central, python-support, python-ply (>= 3.4-1~)
+Build-Depends: debhelper (>= 9), python-support, python-ply (>= 3.4-1~)
 
 Package: {$srcpkg}
 Architecture: {$architecture}
