@@ -5,7 +5,6 @@ Description: Test for use of deprecated dh_* commands
 Test-For:
  dh_desktop-is-deprecated
  dh_installmanpages-is-obsolete
- dh_pycentral-is-obsolete
  dh_pysupport-is-obsolete
  dh_python-is-obsolete
  dh_scrollkeeper-is-deprecated
