@@ -1,3 +1,2 @@
-python-foo usr/share/pyshared-data/
 python-foo usr/share/python-support/
 python-foo.private usr/share/python-support/
