@@ -7,6 +7,13 @@ lintian (2.5.16) UNRELEASED; urgency=low
       "AllowOverride".  Thanks to Jean-Michel Vourgère
       for the report and an initial patch.
       (Closes: #717621)
+  * checks/debhelper.{desc,pm}:
+    + [NT] Remove tag for dh_pycentral being obsolete.
+      Thanks to Luca Falavigna for the report.
+  * checks/files.{desc,pm}:
+    + [NT] Remove tag for missing dependency on
+      python-central.  Thanks to Luca Falavigna for the
+      report.  (Closes: #718690)
   * checks/init.d.{desc,pm}:
     + [NT] Revert init.d-script-call-internal-API for now.
       Refer to #710559 for more information.
